# CustomerSupportAgenticAI

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  __init__.py  check_tasks.py  client.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  support_ticket_env_guide.docx
env/: __init__.py  registry.py
env/graders/: __init__.py  grader_1.py  grader_2.py  grader_3.py
env/tasks/: __init__.py  task_1.py  task_2.py  task_3.py
server/: Dockerfile  __init__.py  app.py  data.py  environment.py  graders.py  requirements.txt  rewards.py  scenarios.py
support_ticket_env/: __init__.py  client.py  models.py
tests/: __init__.py  test_adversarial.py  test_live_space.py  test_submission.py
